--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ REACT_APP_SOUND_SOURCE_API=http://localhost:8080
 REACT_APP_CLIENT_ENDPOINT=/client
 REACT_APP_CITY_ENDPOINT=/city
 REACT_APP_STATE_ENDPOINT=/state
+REACT_APP_LOGIN_ENDPOINT=/login
