--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "clone": "^2.1.2",
+    "dotenv": "^8.2.0",
     "husky": "^5.0.9",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
