Adicionado crud de cliente

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ REACT_APP_CLIENT_ENDPOINT=/client
 REACT_APP_CITY_ENDPOINT=/city
 REACT_APP_STATE_ENDPOINT=/state
 REACT_APP_LOGIN_ENDPOINT=/login
+REACT_APP_ADDRESS_ENDPOINT=/address
+REACT_APP_CARD_BRAND_ENDPOINT=/cardBrand
+REACT_APP_CREDIT_CARD_ENDPOINT=/creditCard
