--- a/.env
+++ b/.env
@@ -1,8 +1,12 @@
 REACT_APP_SOUND_SOURCE_API=http://localhost:8080
 REACT_APP_CLIENT_ENDPOINT=/client
+REACT_APP_DISC_ENDPOINT=/disc
 REACT_APP_CITY_ENDPOINT=/city
 REACT_APP_STATE_ENDPOINT=/state
 REACT_APP_LOGIN_ENDPOINT=/login
 REACT_APP_ADDRESS_ENDPOINT=/address
 REACT_APP_CARD_BRAND_ENDPOINT=/cardBrand
+REACT_APP_CART_PRODUCT_ENDPOINT=/cartProduct
+REACT_APP_ADD_CART_PRODUCT_ITEM_ENDPOINT=/cartProduct/add
+REACT_APP_CART_ENDPOINT=/cart
 REACT_APP_CREDIT_CARD_ENDPOINT=/creditCard
