--- a/.env
+++ b/.env
@@ -6,6 +6,8 @@ REACT_APP_STATE_ENDPOINT=/state
 REACT_APP_LOGIN_ENDPOINT=/login
 REACT_APP_ADDRESS_ENDPOINT=/address
 REACT_APP_CARD_BRAND_ENDPOINT=/cardBrand
+REACT_APP_COUPON_ENDPOINT=/coupon
+REACT_APP_PURCHASE_ENDPOINT=/purchase
 REACT_APP_CART_PRODUCT_ENDPOINT=/cartProduct
 REACT_APP_ADD_CART_PRODUCT_ITEM_ENDPOINT=/cartProduct/add
 REACT_APP_CART_ENDPOINT=/cart
