Adicionado tela de controle de compras ,cupons de cliente e trocas

--- a/.env
+++ b/.env
@@ -8,7 +8,9 @@ REACT_APP_ADDRESS_ENDPOINT=/address
 REACT_APP_CARD_BRAND_ENDPOINT=/cardBrand
 REACT_APP_COUPON_ENDPOINT=/coupon
 REACT_APP_PURCHASE_ENDPOINT=/purchase
+REACT_APP_PURCHASE_CONTROL_ENDPOINT=/purchase/all
 REACT_APP_CART_PRODUCT_ENDPOINT=/cartProduct
 REACT_APP_ADD_CART_PRODUCT_ITEM_ENDPOINT=/cartProduct/add
 REACT_APP_CART_ENDPOINT=/cart
 REACT_APP_CREDIT_CARD_ENDPOINT=/creditCard
+REACT_APP_TRADE_ENDPOINT=/trade
