add rotas de artistas generos precificacao promocoes gravaoras e estoques

--- a/.env
+++ b/.env
@@ -14,3 +14,9 @@ REACT_APP_ADD_CART_PRODUCT_ITEM_ENDPOINT=/cartProduct/add
 REACT_APP_CART_ENDPOINT=/cart
 REACT_APP_CREDIT_CARD_ENDPOINT=/creditCard
 REACT_APP_TRADE_ENDPOINT=/trade
+REACT_APP_ARTIST_ENDPOINT=/artist
+REACT_APP_GENRE_ENDPOINT=/genre
+REACT_APP_PRICING_ENDPOINT=/pricing
+REACT_APP_SALE_ENDPOINT=/sale
+REACT_APP_RECORDER_ENDPOINT=/recorder
+REACT_APP_STOCK_ENDPOINT=/stock
