Crud de funcionario

--- a/.env
+++ b/.env
@@ -20,3 +20,4 @@ REACT_APP_PRICING_ENDPOINT=/pricing
 REACT_APP_SALE_ENDPOINT=/sale
 REACT_APP_RECORDER_ENDPOINT=/recorder
 REACT_APP_STOCK_ENDPOINT=/stock
+REACT_APP_EMPLOYEE_ENDPOINT=/employee
